# simple_fastapi_app_with_user_management_and_tailwind

./: .env.template  .gitignore  LICENSE  Makefile  Procfile  README.md  package.json  pyproject.toml  setup.cfg  tailwind.config.js
.github/workflows/: ci.yml
app/: config.py  crud.py  main.py  models.py  routes.py  schemas.py  views.py
app/db/migrations/models/: 0_20221122234724_init.py
docker/postgres/: psql_init.sh
requirements/: base.txt  dev.txt
tests/: tests_healthcheck.py
