[tool.poetry]
name = "simple_user_app"
version = "0.1.0"
description = "Simple FastAPI App with User Management, Tailwind CSS, Dockerized Postgres and Poetry"
authors = ["Vincent Porte <vincent@neuralia.co>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
python-dotenv = "^0.21.0"
psycopg2-binary = "^2.9.3"
requests = "^2.28.1"
fontawesomefree = "^6.2.0"

[tool.poetry.group.dev.dependencies]
poethepoet = "^0.16.2"
black = "^22.8.0"
flake8 = "^5.0.4"
isort = "^5.10.1"
pylint = "^2.15.2"
pre-commit = "^2.20.0"
coverage = "^6.4.4"
pytest = "^7.1.3"
debugpy = "^1.6.3"
factory-boy = "^3.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poe.tasks]
export = { shell = "poetry export --without-hashes --output requirements/base.txt" }
export_dev = { shell = "poetry export --without-hashes --with dev --output requirements/dev.txt" }

[tool.isort]
profile = "black"

[tool.black]
line_length = 119
